[Designer] Update container styling to fix overflow and sizing (#7899)
* Switch padding to margin and update card heights

* Adjust width and height for border

* Switch header to use margins

* Update widget container styling

* Remove border when background image is present and move logic to widget container class (#8022)

* Remove host container logic from card designer surface

--- a/source/nodejs/adaptivecards-designer/src/containers/widget/widget-container-light.css
+++ b/source/nodejs/adaptivecards-designer/src/containers/widget/widget-container-light.css
@@ -1,13 +1,24 @@
 .ac-adaptiveCard {
     border: 0px;
     padding: 48px 16px 16px 16px !important;
-    border-radius: 8px !important;
+    margin: 0px !important;
+    border-radius: 8px;
+}
+
+.ac-card-elements-wrapper {
+    height: 100%;
+    margin: 0px -16px 0px -16px !important;
+    padding: 0px 16px 0px 16px !important;
+}
+
+.no-overflow {
+    overflow: hidden;
 }
 
 .widget-outer-container {
     border: 1px solid rgba(0, 0, 0, 0.0578);
     background: #f6f6f6;
-    width: 300px;
+    width: 302px;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.065);
     box-sizing: border-box;
@@ -15,28 +26,42 @@
 }
 
 .widget-header {
-    height: 48px;
-    width: 298px;
+    height: 16px;
+    width: 268px;
     position: absolute;
     z-index: 1;
     display: flex;
     justify-content: space-around;
-    padding: 16px;
+    margin: 16px;
     border-radius: 8px 8px 0px 0px;
 }
 
 .widget-large-container {
-    height: 462px;
+    height: 464px;
 }
 
 .widget-medium-container {
-    height: 304px;
+    height: 306px;
 }
 
 .widget-small-container {
-    height: 146px;
+    height: 148px;
 }
 
+.widget-large-container-no-border {
+    height: 462px !important;
+    border: 0px !important;
+}
+
+.widget-medium-container-no-border {
+    height: 304px !important;
+    border: 0px !important;
+}
+
+.widget-small-container-no-border {
+    height: 146px !important;
+    border: 0px !important;
+}
 
 /* widget-large/medium/small-container  4px(top+bottom padding+margin) widget-outer-container border*/
 
@@ -307,11 +332,11 @@ a.ac-anchor:hover {
 }
 
 .ac-carousel-container {
-	padding: 0px 16px 16px 16px !important;
+    padding: 0px 16px 16px 16px !important;
 }
 
 .ac-carousel-card-level-container {
-	margin: 0px -16px -16px -16px !important;
+    margin: 0px -16px -16px -16px !important;
 }
 
 .ac-container.ac-adaptiveCard .swiper-button-prev.ac-carousel-left,
